# aoc

./: Cargo.toml  aoc24.txt
2020/: Cargo.toml
2021/: Cargo.toml  aoc02.txt  aoc05.txt  aoc07.txt  aoc08.txt  aoc10.txt  aoc12.txt  aoc13.txt  aoc14.txt  aoc15.txt  aoc18.txt  aoc19.txt  aoc20.txt  aoc22.txt  aoc24.txt  aoc25.txt
2021/src/: grammar.pest  main.rs
src/: main.rs
