[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Ben Rog-Wilhelm <zorba-githubdesktop20180420@pavlovian.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "*"
scan_fmt = "*"
num = "*"
lazy_static = "*"
itertools = "*"
multiset = "*"
hex = "*"
pest = "^1.0"
pest_derive = "^1.0"
